# Yolo_AnomalyDetect

./: CMakeLists.txt  README.md  main.cpp  shell.txt
UploadModule/: CMakeLists.txt  curl_upload.cpp
include/: BYTETracker.h  func.hpp  params.hpp
models/: modelDescription.md
src/: BYTETracker.cpp  func.cpp  utils.cpp
